--- a/app/views/pages/finalizandopagamento.ejs
+++ b/app/views/pages/finalizandopagamento.ejs
@@ -101,7 +101,7 @@
                     <span>R$ <%= subtotal || '49,90' %></span>
                 </section>
                 <section class="summary-item">
-                    <span>Frete</span>
+                    <span>Frete (<%= freteNome || 'Padrão' %>)</span>
                     <span>R$ <%= frete || '10,00' %></span>
                 </section>
                 <section class="summary-item total-line">
