--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -298,7 +298,7 @@
         <br>
         <br>
         <section class="artigos-section">
-          <span class="artigos-title-1">Artigos</span>
+          <span class="artigos-title-1">conheça os</span><br>
           <span class="artigos-title">Artigos</span>
           <br>
           <section class="container">
